# Medieninformatik

./: .gitignore  README.md
OpenGL-compatibility/: simple.cpp  simple.vcxproj
OpenGL-core/: WavefrontObject.cpp  shader.cpp  shader.sln  simple.vcxproj
Raster2D/: simple.cpp  simple.vcxproj
Raytrace-XCode/raytrace/: Color.cpp  Image.cpp  Light.h  Objekt.cpp  Property.h  Ray.cpp  Ray.h  Surface.cpp  Surface.h  Vector.cpp  raytrace.cpp  rayyacc.y
cReichel/OpenGL-VS2022/: .gitignore
cReichel/OpenGL-VS2022/OpenGL-compatibility/: WavefrontParser.cpp  WavefrontParser.hpp  simple.cpp  simple.vcxproj
cReichel/OpenGL-VS2022/OpenGL-core/: ObjectGenerator.cpp  ObjectGenerator.h  shader.cpp  simple.vcxproj
cReichel/OpenGL-VS2022/Raster2D/: out.txt  simple.cpp  simple.vcxproj
cReichel/Raytrace-VS2022/raytrace/: .gitignore  Ray.cpp  raytrace.cpp  rayyacc.tab.c  rayyacc.y
cReichel/Raytrace-VS2022/raytrace/data/: dflt.data
jGehring/OpenGL-XCode/OpenGL-Core/OpenGL/: WavefrontObject.cpp  main.cpp
jGehring/OpenGL-XCode/OpenGL-Lighting Playground/OpenGL/: CMakeLists.txt  ShaderReader.cpp  ShaderReader.hpp  WavefrontObject.cpp  WavefrontObject.hpp  gouraud.vs  main.cpp  normal.vs  phong.fs  phong.vs  texture.vs
jGehring/OpenGL-XCode/OpenGL-Test/: CMakeLists.txt
jGehring/OpenGL-XCode/OpenGL-Test/OpenGL/: WavefrontObject.hpp
jGehring/OpenGL-XCode/UB5|2/: U5A4.m
jGehring/Raytrace-XCode/raytrace/: Color.h  Image.h  Objekt.h  Property.h  Ray.cpp  Ray.h  Surface.cpp  Surface.h  Vector.h  WavefrontObject.cpp  WavefrontObject.hpp  raylex.l  raytrace.cpp  rayyacc.y
(+33 files in other folders)
